xine-lib (1.1.18.1) 2010-??-??
  * Oops. compat.c (for DXR3 support) was omitted.

xine-lib (1.1.18) 2010-02-23
  * Bump the FLAC decoder's priority above ffmpegaudio. This should fix
    various problems with FLAC playback.
  * Build fix (undefined symbol) for when using older ffmpeg.
  * TTA demuxer fixes; allow seeking.
  * More meta-information tags.
    Only the Ogg demuxer knows about these at present.
  * Added basic support for .qtl (Quicktime media link).
  * "Fixed" playback of 24-bit FLAC.
  * Fixed playback of 24-bit LPCM.
  * Work around an ffmpeg bug concerning Sorenson Video 3.
  * Flash audio bug fixes, mostly concerning AAC.
  * Fix DXR3 support for newer versions of the em8300 driver.
  * Added support for WMA Pro.

xine-lib (1.1.17) 2009-12-01
  * Add support for Matroska SIMPLEBLOCK.
  * Add support for sndio (OpenBSD sound API).
  * Correct invalid MIME info in the MOD demuxer.
  * Fix a resource leak in libdvdnav.
  * Properly NUL-terminate when reading ID3v2.2 tag content.
  * Fix handling of the length of UTF-16 content sourced from, e.g., ID3 tags.
  * Make ~/.xine/catalog.cache writing safer: write a new file & atomically
    replace the old one.
  * Initial parsing of Xing header LAME extension.
  * Fixes for gapless playback.
  * Added padding delay to the first and last frames (MPEG audio).
  * Fixed buggy discontinuity handling when playing short streams and using the gapless switch. The current time should not be used here.
  * Added audio padding handling. (New buffer flag for this.)
  * Fix seeking in large raw DV files.
  * Ported to new libmpcdec API (retaining build compat. with the old API).
  * Cope with CDDB return code 211 (multiple entries).
  * Allow reading of non-block-sized chunks from audio CDs.
  * Add a user agent & protocol hack ("qthttp://...") to allow direct
    viewing of Apple film trailers.
  * Fixed int-to-float conversion in the JACK output plugin.
  * Work around MOD files with reported length == 0.